--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,29 @@
           <artifactId>geoip2</artifactId>
           <version>4.4.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.torproject</groupId>
+          <artifactId>descriptor</artifactId>
+          <version>2.2.7</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/lib/metrics-lib-2.27.0.jar</systemPath>
+      </dependency>
+      <dependency>
+          <groupId>org.torproject</groupId>
+          <artifactId>descriptor</artifactId>
+          <version>2.2.7</version>
+          <classifier>sources</classifier>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/lib/metrics-lib-2.27.0-sources.jar</systemPath>
+      </dependency>
+      <dependency>
+          <groupId>org.torproject</groupId>
+          <artifactId>descriptor</artifactId>
+          <version>2.2.7</version>
+          <classifier>javadoc</classifier>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/lib/metrics-lib-2.27.0-javadoc.jar</systemPath>
+      </dependency>
   </dependencies>
 
 </project>
